# Sword2

./: .gitignore  CMakeLists.txt  README.me
Android/: settings.gradle
Android/Sword2Android/: .gitignore  build.gradle
Android/Sword2Android/src/main/: AndroidManifest.xml
Android/Sword2Android/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Android/Sword2Android/src/main/java/com/github/rpg3d/sword2android/: MainActivity.java
Android/Sword2Android/src/main/res/layout/: activity_main.xml
Android/Sword2Android/src/main/res/values/: strings.xml
Android/app/: build.gradle
Android/app/src/androidTest/java/com/github/rpg3d/sword2android/: ExampleInstrumentedTest.java
Android/app/src/androidTest/java/org/libsdl/app/: ExampleInstrumentedTest.java
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Android/app/src/main/java/com/github/rpg3d/sword2android/: MainActivity.java
Android/app/src/main/java/org/libsdl/app/: SDLActivity.java
Android/app/src/main/res/values/: strings.xml
Android/app/src/test/java/com/github/rpg3d/sword2android/: ExampleUnitTest.java
Android/app/src/test/java/org/libsdl/app/: ExampleUnitTest.java
Android/gradle/wrapper/: gradle-wrapper.properties
Cmake/Modules/: FindSDL2.cmake
Engine/: CMakeLists.txt  Engine.cpp  Engine.h  EngineBase.cpp  EngineBase.h
Engine/Component/: Button.cpp  CheckBox.cpp  ImageContainer.cpp  Item.cpp  Label.cpp  ListBox.cpp  MemoText.cpp  Panel.cpp  Scrollbar.cpp  TalkLabel.cpp  VideoPlayer.cpp
Engine/Element/: Element.h
Engine/File/: INIReader.cpp  PakFile.cpp  PakFile.h
Engine/Image/: IMP.h
Engine/libconvert/: libconvert.cpp
Sword2/: CMakeLists.txt  Game.cpp  Game.h  GameTypes.h  Main.cpp
Sword2/Config/: Config.cpp  Config.h
Sword2/Data/: Camera.cpp  CollisionDetector.cpp  Effect.cpp  EffectManager.cpp  GameElement.h  Global.cpp  Global.h  GoodsManager.cpp  Magic.cpp  MagicManager.cpp  Map.cpp  Map.h  Memo.cpp  Memo.h  NPCManager.cpp  ObjectManager.cpp  PartnerManager.cpp  Player.cpp  Traps.cpp  Traps.h  VariableList.cpp  VariableList.h
Sword2/GameManager/: BottomWndController.h  GameController.h  GameManager.cpp  GameManager.h  MenuController.h
Sword2/Menu/: BottomMenu.cpp  BottomMenu.h  BuySellMenu.cpp  BuySellMenu.h  ColumnMenu.h  Dialog.h  EquipMenu.cpp  EquipMenu.h  GoodsMenu.cpp  GoodsMenu.h  MagicMenu.cpp  MagicMenu.h  MemoMemu.h  MsgBox.h  Option.h  PracticeMenu.h  SaveLoad.cpp  SaveLoad.h  StateMenu.h  System.cpp  System.h  ToolTip.cpp  ToolTip.h  YesNo.h
Sword2/Scene/: MainScene.h  Nurturance.h  Title.h  TitleTeam.cpp  TitleTeam.h  VideoPage.h
Sword2/Script/: Script.cpp  Script.h
Sword2/Weather/: Weather.cpp  Weather.h
